--- a/djangoS3Browser/templates/index.html
+++ b/djangoS3Browser/templates/index.html
@@ -43,9 +43,12 @@
 {#                        <li><a href="#"><span class="fa fa-upload fa-lg" data-toggle="collapse"#}
 {#                                              data-target="#collapseUpload" title="{% trans "Upload" %}"></span></a>#}
                         </li>
-                        <li><a href="javascript:;" onclick="download_files();"><span class="fa fa-download fa-lg"
-                                                                                     title="{% trans "Download Selected File" %}"></span></a>
+
+                        <li><a href="#"><span class="fa fa-search fa-lg" data-toggle="collapse"
+                                              data-target="#collapseSearchFile"
+                                              title="{% trans "File Search" %}"></span></a></li>
                         </li>
+
                         <li><a href="javascript:;" onclick="copy_selected_file();"><span class="fa fa-lg fa-files-o"
                                                                                          title="{% trans "Copy Select Files" %}"></span></a>
                         </li>
@@ -66,7 +69,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="javascript:;" id="top_folder" data-top_folder="-" onclick="back_folder(this);"><span
                                     class="fa fa-chevron-left fa-lg"></span></a></li>
-                            <li class="pb-filemng-active"><a href="javascript:;" onclick="get_files('-');"><span
+                            <li class="pb-filemng-active"><a href="javascript:;" onclick="get_files('{{ root }}');"><span
                                     class="fa fa-home fa-lg"></span></a></li>
                             <li id="current"></li>
                         </ul>
@@ -92,6 +95,23 @@
                         </div>
                     </div>
                 </div>
+
+                <!--Search File-->
+                <div class="collapse" id="collapseSearchFile">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="form-inline">
+                                <div class="form-group">
+                                    <input class="form-control" id="searched_folder_name"
+                                           placeholder="{% trans "File Name" %}">
+                                </div>
+                                <button type="button" class="btn btn-sm btn-primary"
+                                        onclick="search_folder($('#location').attr('data-location'))">{% trans "Search" %}</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!--File Upload-->
                 <div id="collapseUpload">
                     <div class="panel panel-default">
@@ -138,117 +158,59 @@
             </div>
         </div>
     </div>
-    <div id="location" data-location="-"></div>
+    <div id="location" data-location="{{ root }}"></div>
 </div>
 <script>
     +function ($) {
         'use strict';
-
         // UPLOAD CLASS DEFINITION
         // ======================
-
         var dropZone = document.getElementById('drop-zone');
         var uploadForm = document.getElementById('js-upload-form');
 
         var startUpload = function (file) {
             var loc = $('#location').attr("data-location");
             console.log(file[0].size, loc);
-
             var data = new FormData();
             data.append("file", file[0]);
             data.append("loc", loc);
-
-            if (file[0] > 52428800) // bigger than 50MB
+            if (file[0].size >= 52428800) // bigger than 50MB
             {
-                var parts = file[0] / 5242880;
-                var bucketRegion = 'ap-southeast-1';
-                var IdentityPoolId = 'us-west-2:bfca573d-3cfc-42c7-8310-ff9c0218101d';
+                var albumBucketName = 'khuropbox';
+                var bucketRegion = 'ap-northeast-2';
+                var IdentityPoolId = 'ap-northeast-2:b9794a61-92de-42ed-b6e9-c6d65fdcfd7c';
 
-                // make aws credential
-                // https://docs.aws.amazon.com/ko_kr/cognito/latest/developerguide/developer-authenticated-identities.html
-
-                AWS.config.credentials = new AWS.CognitoIdentityCredentials({
-                    IdentityPoolId: IdentityPoolId,
-                    IdentityId: 'IDENTITY_ID_RETURNED_FROM_YOUR_PROVIDER',
-                    Logins: {
-                        'cognito-identity.amazonaws.com': 'TOKEN_RETURNED_FROM_YOUR_PROVIDER'
-                    }
+                AWS.config.update({
+                    region: bucketRegion,
+                    credentials: new AWS.CognitoIdentityCredentials({
+                        IdentityPoolId: IdentityPoolId
+                    })
                 });
-
-                // get S3 Bucket and do multipart upload
-                // https://docs.aws.amazon.com/AWSJavaScriptSDK/latest/AWS/S3.html#uploadPart-property
 
                 var s3 = new AWS.S3({
                     apiVersion: '2006-03-01',
-                    params: {Bucket: "khuropbox2015"}
+                    params: {Bucket: albumBucketName}
+                })
+                var files = document.getElementById('js-upload-files').files;
+
+                s3.upload({
+                        Key: loc.substring(1) + files[0].name,
+                        Body: files[0],
+                        ACL: 'public-read'
+                    },
+                    {
+                        partSize : 8 * 1024 * 1024 ,
+                        queueSize : 1
+                    }
+                ).on("httpUploadProgress", function (progress) {
+                    console.log(progress.loaded + " of " + progress.total + " bytes");
+                }).send(function(err, data) {
+                    document.getElementById("js-upload-finished-list").innerHTML = '<a href="#" ' +
+                        'class="list-group-item list-group-item-success">' +
+                        '<span class="badge alert-success pull-right"' +
+                        '>{% trans "Success" %}</span>' + file[0].name + '</a>';
+                    get_files(loc);
                 });
-
-                var filekey = loc + file.name;
-
-                var params = {
-                    Bucket: "khuropbox2015",
-                    Key: filekey
-                };
-
-                // upload initiation
-
-                s3.createMultipartUpload(params, function (err, data) {
-                    if (err) console.log(err, err.stack); // an error occurred
-                    else console.log(data);           // successful response
-                });
-
-                var uploadID = data.UploadId;
-                /*
-                params = {
-                      //Body: <Binary String>, // needed to be edited
-                      Bucket: "khuropbox2015",
-                      Key: filekey,
-                      PartNumber: num,
-                      UploadId: uploadID,
-                     };
-
-                var filemulti = filemulti[0];
-
-                // uploading parts of file
-
-                for (var i = 0; i < parts; i++)
-                {
-                    s3.uploadPart(params, function(err, data) {
-                       if (err) console.log(err, err.stack); // an error occurred
-                       else     console.log(data);           // successful response
-                     });
-                    filemulti[i].append(data);
-                    // divide file into parts as 5MB size
-                }
-                */
-
-                 var params = {
-                  Bucket: "khuropbox2015",
-                  Key: filekey,
-                  UploadId: uploadID
-                 };
-
-                s3.listParts(params, function(err, data) {
-                   if (err) console.log(err, err.stack); // an error occurred
-                   else     console.log(data);           // successful response
-                 });
-                // list parts
-
-                params = {
-                    Bucket: "khuropbox2015",
-                    Key: filekey,
-                    MultipartUpload: {
-                    Parts: filemulti[0]
-                      },
-                    UploadId: uploadID
-                     };
-
-                // complete upload
-                s3.completeMultipartUpload(params, function(err, data) {
-                   if (err) console.log(err, err.stack); // an error occurred
-                   else     console.log(data);           // successful response
-                 });
-
             }
             else
             {
@@ -291,40 +253,23 @@
             }
         };
 
+
         uploadForm.addEventListener('submit', function (e) {
             var uploadFiles = document.getElementById('js-upload-files').files;
             e.preventDefault();
             startUpload(uploadFiles);
         });
 
-        dropZone.ondrop = function (e) {
-            e.preventDefault();
-            this.className = 'upload-drop-zone';
-            startUpload(e.dataTransfer.files)
-        };
-
-        dropZone.ondragover = function () {
-            this.className = 'upload-drop-zone drop';
-            return false;
-        };
-
-        dropZone.ondragleave = function () {
-            this.className = 'upload-drop-zone';
-            return false;
-        }
-
     }(jQuery);
 </script>
 <script>
     $(document).ready(function () {
         //$('.progress').hide();
-        get_files("-");
+        get_files("{{ root }}");
     });
-
     var selected_file_list = [];
     var copy_selected_file_list = [];
     var sort_a_z_value = true;
-
     function create_folder() {
         var loc = $('#location').attr("data-location");
         var folder_name = $('#created_folder_name').val();
@@ -338,7 +283,34 @@
         $('#collapseCreateFolder').collapse("hide");
         refresh_folder();
     }
-
+    function search_folder(main_folder) {
+        var file_name = $('#searched_folder_name').val();
+        $(".pb-filemng-template-body").empty();
+        var get_files_url = "{% url 'get_folder_items' "arg1djs3server" "sort_a_z" %}".replace(/arg1djs3server/, main_folder.toString()).replace(/sort_a_z/, sort_a_z_value);
+        $.getJSON(
+            get_files_url, function (files_list) {
+                for (var key in files_list) {
+                    if ('folder' == files_list[key].type) {
+                        search_folder(main_folder + files_list[key].text);
+                    }
+                    if (files_list[key].text.indexOf(file_name) === -1) continue;
+                    target = "";
+                    if ('folder' != files_list[key].type) {
+                        target = 'target="_blank"';
+                    }
+                    $(".pb-filemng-template-body").append(
+                        '<div class="col-sm-2 pb-filemng-body-folders" onClick="select_file(this);" ondblclick="open_item(this);" ' +
+                        'data-toggle="tooltip" ondrop="drop_file(event)" ondragover="allowDrop_file(event)" ondragstart="dragstart_file(event)" ondragend="dragend_file(event)" draggable="true" title="' + files_list[key].text +
+                        '" data-url="' + files_list[key].url + '" data-type="' + files_list[key].type + '">' +
+                        '<img src="' + files_list[key].icon + '"/></a>' + '<br />' +
+                        '<p class="pb-filemng-paragraphs" >' + files_list[key].text + '</p>' +
+                        '<span class="fa check-file"></span>' +
+                        '<span class="hide location-info">' + main_folder + files_list[key].text + '</span>' +
+                        '</div>'
+                    );
+                }
+            });
+    }
     function sort_a_z(d) {
         loc = $('#location').attr("data-location");
         $(d).toggleClass('fa-sort-alpha-desc');
@@ -351,7 +323,6 @@
         }
         refresh_folder();
     }
-
     function select_file(d) {
         $(d).find('.check-file').toggleClass('fa-check');
         $(d).parent().siblings().find('.check-file').removeClass('fa-check');
@@ -362,14 +333,11 @@
             selected_file_list.push(file_item);
         }
     }
-
     function copy_selected_file() {
         copy_selected_file_list = selected_file_list;
         $('#paste_file').removeClass('hidden');
         $('#move_file').removeClass('hidden');
     }
-
-
     function paste_file() {
         loc = $('#location').attr("data-location");
         $('#paste_file').toggleClass('hidden');
@@ -385,9 +353,8 @@
                 refresh_folder();
             },
         });
+        location.reload();
     }
-
-
     function delete_file() {
         loc = $('#location').attr("data-location");
         data = {'file_list': selected_file_list};
@@ -401,14 +368,10 @@
             },
         });
     }
-
-
     function refresh_folder() {
         get_files($('#location').attr("data-location"));
     }
-
     {#    item detail#}
-
     function open_item(d) {
         url = d.getAttribute("data-url");
         type = d.getAttribute("data-type");
@@ -417,11 +380,8 @@
         } else {
             window.open(url, '_blank');
         }
-
     }
-
     {#back top folder#}
-
     function back_folder(d) {
         var loc = d.getAttribute('data-top_folder');
         get_files(loc);
@@ -432,20 +392,16 @@
             top_loc = top_loc + loc_array[i] + "/"
         }
         if (1 > top_loc.length) {
-            top_loc = "-"
+            top_loc = "{{ root }}"
         }
         $('#top_folder').attr("data-top_folder", top_loc);
     }
-
     {#    "fetch the directories within the selected folder" #}
-
     function get_files(main_folder) {
         selected_file_list = [];
         $('#top_folder').attr("data-top_folder", $('#location').attr("data-location"));
         $('#location').attr("data-location", main_folder);
-
         $('#current').html('현재 위치 ' + main_folder);
-
         $(".pb-filemng-template-body").empty();
         var get_files_url = "{% url 'get_folder_items' "arg1djs3server" "sort_a_z" %}".replace(/arg1djs3server/, main_folder.toString()).replace(/sort_a_z/, sort_a_z_value);
         $.getJSON(
@@ -460,8 +416,7 @@
                         'data-toggle="tooltip" ondrop="drop_file(event)" ondragover="allowDrop_file(event)" ondragstart="dragstart_file(event)" ondragend="dragend_file(event)" draggable="true" title="' + files_list[key].text +
                         '" data-url="' + files_list[key].url + '" data-type="' + files_list[key].type + '">' +
                         '<img src="' + files_list[key].icon + '"/></a>' + '<br />' +
-                        '<p class="pb-filemng-paragraphs" onClick="rename_file_onfocus(this);"  >' + files_list[key].text + '</p>' +
-                        '<input  type="text" class="form-control hidden rename-input" onfocusout="rename_file_onfocusout(this);" value="' + files_list[key].text + '">' +
+                        '<p class="pb-filemng-paragraphs" >' + files_list[key].text + '</p>' +
                         '<span class="fa check-file"></span>' +
                         '<span class="hide location-info">' + main_folder + files_list[key].text + '</span>' +
                         '</div>'
@@ -472,86 +427,24 @@
                 }
             });
     }
-
     function download_files() {
         for (var key in selected_file_list) {
             window.open("{% url 'download' %}" + "?file=" + selected_file_list[key], "_blank");
         }
     }
-
-    {#rename item focus#}
-
-    function rename_file_onfocus(d) {
-        $(d).parent().find('.rename-input').removeClass('hidden');
-        $(d).parent().find('.rename-input').focus();
-        $(d).toggleClass('hidden');
-    }
-
-    {#rename item focusout#}
-
-    function rename_file_onfocusout(d) {
-        var file = $(d).parent().find('.pb-filemng-paragraphs').html();
-        var loc = $('#location').attr("data-location");
-        var new_name = $(d).val();
-        data = {'loc': loc, 'file': file, 'new_name': new_name};
-        $.ajax({
-            url: '{% url "rename_file" %}',
-            type: 'POST',
-            dataType: 'json',
-            data: data,
-            success: function (resultData) {
-                $(d).parent().find('.pb-filemng-paragraphs').html(resultData);
-                $(d).parent().find('.pb-filemng-paragraphs').removeClass('hidden');
-                $(d).toggleClass('hidden');
-            },
-        });
-    }
-
-    function move_file(loc, file_list) {
-        $('#move_file').toggleClass('hidden');
-        $('#paste_file').toggleClass('hidden');
-        data = {'loc': loc, 'file_list': file_list};
-        $.ajax({
-            url: '{% url "move_file" %}',
-            type: 'POST',
-            dataType: 'json',
-            data: data,
-            success: function (resultData) {
-                get_files($('#location').attr("data-location"));
-            },
-        });
-        location.reload();
-    }
-
-
-    function move_selected_file(d) {
-        move_file($('#location').attr("data-location"), copy_selected_file_list);
-    }
-
     {#drag and drop file for move file start#}
-
     function dragstart_file(e) {
         for (var key in selected_file_list) {
             $("div[title=\"" + selected_file_list[key].slice(1) + "\"]")[0].style.opacity = '0.4';
         }
     }
-
     function dragend_file(e) {
         for (var key in selected_file_list) {
             $("div[title=\"" + selected_file_list[key].slice(1) + "\"]")[0].style.opacity = '1';
         }
     }
-
-    function drop_file(e) {
-        e.preventDefault();
-        if ($(e.target).parent().attr("data-type") === 'folder') {
-            move_file("-" + $(e.target).parent().attr("title"), selected_file_list);
-        }
-    }
-
     function allowDrop_file(e) {
         e.preventDefault();
     }
-
     {#drag and drop file for move file end#}
 </script>
